; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/comedi/kcomedilib/extr_kcomedilib_main.c_comedi_dio_get_config.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/comedi/kcomedilib/extr_kcomedilib_main.c_comedi_dio_get_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.comedi_device = type { i32 }
%struct.comedi_insn = type { i32, i32, i32, i32 }

@INSN_CONFIG = common dso_local global i32 0, align 4
@INSN_CONFIG_DIO_QUERY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @comedi_dio_get_config(%struct.comedi_device* %0, i32 %1, i32 %2, i32* %3) #0 {
  %5 = alloca %struct.comedi_device*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca %struct.comedi_insn, align 4
  %10 = alloca [2 x i32], align 4
  %11 = alloca i32, align 4
  store %struct.comedi_device* %0, %struct.comedi_device** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32* %3, i32** %8, align 8
  %12 = call i32 @memset(%struct.comedi_insn* %9, i32 0, i32 16)
  %13 = load i32, i32* @INSN_CONFIG, align 4
  %14 = getelementptr inbounds %struct.comedi_insn, %struct.comedi_insn* %9, i32 0, i32 3
  store i32 %13, i32* %14, align 4
  %15 = getelementptr inbounds %struct.comedi_insn, %struct.comedi_insn* %9, i32 0, i32 0
  store i32 2, i32* %15, align 4
  %16 = load i32, i32* %6, align 4
  %17 = getelementptr inbounds %struct.comedi_insn, %struct.comedi_insn* %9, i32 0, i32 1
  store i32 %16, i32* %17, align 4
  %18 = load i32, i32* %7, align 4
  %19 = call i32 @CR_PACK(i32 %18, i32 0, i32 0)
  %20 = getelementptr inbounds %struct.comedi_insn, %struct.comedi_insn* %9, i32 0, i32 2
  store i32 %19, i32* %20, align 4
  %21 = load i32, i32* @INSN_CONFIG_DIO_QUERY, align 4
  %22 = getelementptr inbounds [2 x i32], [2 x i32]* %10, i64 0, i64 0
  store i32 %21, i32* %22, align 4
  %23 = getelementptr inbounds [2 x i32], [2 x i32]* %10, i64 0, i64 1
  store i32 0, i32* %23, align 4
  %24 = load %struct.comedi_device*, %struct.comedi_device** %5, align 8
  %25 = getelementptr inbounds [2 x i32], [2 x i32]* %10, i64 0, i64 0
  %26 = call i32 @comedi_do_insn(%struct.comedi_device* %24, %struct.comedi_insn* %9, i32* %25)
  store i32 %26, i32* %11, align 4
  %27 = load i32, i32* %11, align 4
  %28 = icmp sge i32 %27, 0
  br i1 %28, label %29, label %33

29:                                               ; preds = %4
  %30 = getelementptr inbounds [2 x i32], [2 x i32]* %10, i64 0, i64 1
  %31 = load i32, i32* %30, align 4
  %32 = load i32*, i32** %8, align 8
  store i32 %31, i32* %32, align 4
  br label %33

33:                                               ; preds = %29, %4
  %34 = load i32, i32* %11, align 4
  ret i32 %34
}

declare dso_local i32 @memset(%struct.comedi_insn*, i32, i32) #1

declare dso_local i32 @CR_PACK(i32, i32, i32) #1

declare dso_local i32 @comedi_do_insn(%struct.comedi_device*, %struct.comedi_insn*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
